--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@vitejs/plugin-vue": "^5.0.2",
         "less": "^4.2.0",
         "vue": "^3.4.5",
-        "vue-router": "4"
+        "vue-router": "4",
+        "vuex": "^4.0.2"
     }
 }
